--- a/src/main/java/hust/oop/thuvienlichsu/JavaFx/FXML/detailScreen.fxml
+++ b/src/main/java/hust/oop/thuvienlichsu/JavaFx/FXML/detailScreen.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <top>
@@ -19,9 +18,6 @@
       </AnchorPane>
    </top>
    <center>
-      <TextArea fx:id="detailField" editable="false" wrapText="true" BorderPane.alignment="CENTER">
-         <font>
-            <Font size="18.0" />
-         </font></TextArea>
+      <TextArea fx:id="detailField" editable="false" wrapText="true" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
