--- a/src/main/java/hust/oop/thuvienlichsu/JavaFx/FXML/searchScreen.fxml
+++ b/src/main/java/hust/oop/thuvienlichsu/JavaFx/FXML/searchScreen.fxml
@@ -4,8 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,34 +12,19 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <AnchorPane prefWidth="1024.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="63.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
          <children>
-            <MenuButton fx:id="menuList" layoutX="14.0" layoutY="13.0" mnemonicParsing="false" text="Menu">
-              <items>
-                <MenuItem fx:id="listNhanVat" mnemonicParsing="false" onAction="#showNhanVat" text="Nhân vật" />
-                <MenuItem fx:id="listThoiKi" mnemonicParsing="false" onAction="#showThoiKi" text="Thời kì" />
-                  <MenuItem fx:id="listDiaDiem" mnemonicParsing="false" onAction="#showDiaDiem" text="Địa điểm" />
-                  <MenuItem fx:id="listSuKien" mnemonicParsing="false" onAction="#showSuKien" text="Sự kiện" />
-              </items>
-            </MenuButton>
-            <AnchorPane layoutX="818.0" prefWidth="300.0" AnchorPane.rightAnchor="0.0">
-               <children>
-                  <TextField fx:id="inputField" layoutX="104.0" layoutY="11.0" prefHeight="30.0" prefWidth="186.0">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </TextField>
-                  <Label layoutX="14.0" layoutY="12.0" text="Tìm kiếm">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
+            <Label layoutX="14.0" layoutY="18.0" text="Tìm kiếm">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="inputField" layoutX="98.0" layoutY="17.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
          </children>
-         <padding>
-            <Insets bottom="10.0" />
-         </padding>
       </AnchorPane>
    </top>
    <center>
